...
    <string name="action_resumeTweet">Resume Tweet</string>

    <string name="user_following">following</string>
    <string name="user_muting">muting</string>
    <string name="user_blocking">blocking</string>

    <string name="title_home">home</string>
    <string name="title_conv">conversation</string>
    <string name="title_detail">tweet</string>
    <string name="title_search">search</string>
    <string name="title_tweet">what\'s happening?</string>
    <string name="title_reply">reply</string>
    <string name="title_comment">comment</string>
    <string name="title_oauth">welcome</string>
    <string name="title_add_account">add registered account</string>
    <string name="title_settings">@string/drawer_menu_settings</string>
    <string name="title_owned_list">lists</string>

    <string name="media_chooser_title">choose to upload…</string>
    <string name="media_upload_delete">delete</string>

    <string name="drawer_menu_home">home</string>
    <string name="drawer_menu_license">OSS license</string>
    <string name="drawer_menu_add_account">add registered account</string>
    <string name="drawer_menu_settings">settings</string>

    <string name="lists">lists</string>

    <string name="oauth_hint_input_pin">input PIN code</string>
    <string name="oauth_send_pin">Send pin</string>
    <string name="oauth_demo_tweet">welcome to aoeliyakei! this is dummy tweet. you can select me and do action with circle button appearing below.</string>
    <string name="oauth_demo_quoted">you can select only quoted tweet.</string>
    <string name="oauth_explain">login Twitter via below button and activate \'aoeliyakei\'. And then, copy PIN code and return to this app.</string>
    <string name="oauth_pin_direction">input PIN code and send it.</string>

    <string name="settings_title_sensitive">hide sensitive thumbnail</string>
    <string name="settings_key_sensitive" translatable="false">key_hide_sensitive_thumb</string>
    <bool name="settings_sensitive_default">true</bool>
    <string name="settings_key_loginUser" translatable="false">key_login_user</string>
    <string name="settings_title_loginUser">login account on launching</string>
    <string name="settings_loginUser_default" translatable="false">-1</string>
    <string name="settings_title_version">version</string>
    <string name="settings_key_version" translatable="false">key_version</string>
    <string name="title_share">share</string>
    <string-array name="settings_loginUser_entries">
...
