...
        android:id="@+id/oauth_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oauth_explain"
        />
    <Button
        android:id="@+id/oauth_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_grid_margin"
        android:layout_below="@id/oauth_explain"
        android:text="@string/oauth_login"
        android:layout_gravity="center_horizontal"
...
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="@dimen/detail_grid_margin"
            android:layout_marginEnd="@dimen/detail_grid_margin"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/oauth_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oauth_hint_input_pin"
                android:inputType="numberDecimal"
                android:nextFocusUp="@id/oauth_pin"
                android:nextFocusLeft="@id/oauth_pin"
...
