...
            <android.support.design.widget.AppBarLayout
                android:id="@+id/main_appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:title="@string/title_home"
                    app:titleTextColor="@color/text_primary_inverse"
                    app:layout_collapseMode="pin"
                    />
...
                tools:visibility="visible"
                />

        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_drawer"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            app:menu="@menu/nav_menu"
            />

...
